--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,93 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="20dp">
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:scrollbars="none">
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <!--<ImageView-->
-            <!--android:id="@+id/fragment_profile_picture"-->
-            <!--android:layout_width="200dp"-->
-            <!--android:layout_height="200dp"-->
-            <!--android:background="#000000"-->
-            <!--android:scaleType="centerCrop"-->
-            <!--android:layout_gravity="center_horizontal"-->
-            <!--android:layout_weight="0.9" />-->
-        <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/fragment_profile_picture"
-            android:layout_width="200dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="0.9"
-            app:civ_border_color="#FFFFFF"/>
+            android:orientation="horizontal">
 
-        <View
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:id="@+id/fragment_profile_qrcode"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center|right"
-            android:layout_weight="0.1"
-            android:src="@drawable/qrcode_user"/>
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/fragment_profile_picture"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="0.9"
+                android:scaleType="centerCrop"
+                app:civ_border_color="#FFFFFF" />
+
+            <View
+                android:layout_width="30dp"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/fragment_profile_qrcode"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center|right"
+                android:layout_weight="0.1"
+                android:src="@drawable/qrcode_user" />
+
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/fragment_profile_username"
+            style="@style/Base.TextAppearance.AppCompat.Large"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center"
+            android:textColor="@color/grey"
+            android:textSize="30sp"
+            tools:text="plebasdz" />
+
+        <TextView
+            android:id="@+id/fragment_profile_mood_tittle"
+            style="@style/Base.TextAppearance.AppCompat.Large"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="-20dp"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center"
+            android:textColor="@color/grey"
+            android:textSize="20sp"
+            android:textStyle="italic"
+            tools:text="statut" />
+
+        <EditText
+            android:id="@+id/fragment_profile_mood"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:inputType="text" />
+
+        <TextView
+            android:id="@+id/fragment_profile_password"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:background="@color/colorPrimary"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center"
+            android:text="changer de mot de passe"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/fragment_profile_disconnect"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:background="@color/colorPrimaryDark"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center"
+            android:text="déconnecter"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:layout_marginBottom="20dp"/>
 
     </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/fragment_profile_username"
-        style="@style/Base.TextAppearance.AppCompat.Large"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/grey"
-        android:fontFamily="sans-serif-medium"
-        android:gravity="center"
-        android:textSize="30sp"
-        android:layout_marginTop="30dp"
-        tools:text="plebasdz" />
-
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
-    <TextView
-        android:id="@+id/fragment_profile_password"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:background="@color/colorPrimary"
-        android:fontFamily="sans-serif-medium"
-        android:gravity="center"
-        android:text="changer de mot de passe"
-        android:textColor="#ffffff"
-        android:textSize="20sp" />
-
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
-    <TextView
-        android:id="@+id/fragment_profile_disconnect"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:background="@color/colorPrimaryDark"
-        android:fontFamily="sans-serif-medium"
-        android:gravity="center"
-        android:text="déconnecter"
-        android:textColor="#ffffff"
-        android:textSize="20sp" />
-
-</LinearLayout>
+</ScrollView>
